# python-package-template

./: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  cookiecutter.json  pre-commit-config.yaml  pyproject.toml  tox.ini
conda-recipe/: meta.yaml
scripts/: sync_conda_recipe.py  update_feedstock.py
