[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"
]
readme = "README.md"
license = "{{ cookiecutter.license }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_name }}"
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.package_name }}/"
packages = [{include = "{{ cookiecutter.package_name }}", from = "src"}]
include = ["src/{{ cookiecutter.package_name }}/py.typed", "src/{{ cookiecutter.package_name }}/**/*.pyi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0-or-later",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]
keywords = {{ cookiecutter.keywords }}

[tool.poetry.dependencies]
python = ">=3.9, <4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pylint = "*"
mypy = "*"
bandit = "*"
pip-audit = "*"
pre-commit = "*"
hypothesis = "*"
sphinx = "*"
furo = "*"
sphinx-autodoc-typehints = "*"
myst-parser = "*"
linkify-it-py = "*"
sphinxcontrib-googleanalytics = "*"
tox = "*"
pytest-asyncio = "*"
pytest-mock = "*"
tomli = "*"
sphinx-sitemap = "*"

[tool.mypy]
files = "{{ cookiecutter.package_name }}"
ignore_missing_imports = true

[tool.pylint]
max-line-length = 120
ignore-patterns = [".*\\.pyi$"]

[tool.bandit]
exclude_dirs = ["tests", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
